Add a few more sections

--- a/content/posts/markdown-graph.mdx
+++ b/content/posts/markdown-graph.mdx
@@ -45,10 +45,15 @@ for the graph linking was weird. It wasn't open source.
 
 There isn't a baked in API and publish workflow.
 
+It still seems to promote a lot of hierarchy, particularly at
+the block-level, and de-emphasized **the connections** that
+were outside the scope of a bidirectional link.
+
 And there was one large, fundamental issue. I want something
 MDX-based.
 
-This is where I think our work on [Sector](https://sector.tools)
+This is where I think [Chris Biscardi's](https://christopherbiscardi.com)
+work on [Sector](https://sector.tools)
 will be interesting because I think MDX will open up lots
 of doors while still allowing us to avoid custom syntax.
 
@@ -99,3 +104,9 @@ to reference prior writing.
 Yet, right now, I'm not referencing prior blog posts I've
 written that are relevant. Because, it's too manual and
 I'm lazy.
+
+## Related
+
+- https://www.sector.tools
+- https://maggieappleton.com/bidirectionals
+- https://www.semilattice.xyz
