--- a/content/posts/build-for-you.mdx
+++ b/content/posts/build-for-you.mdx
@@ -85,4 +85,4 @@ Writing software should be about having fun, being creative, and improving
 lives. If you're your own first user, by building for you, you'll have a
 head start.
 
-Happy hacking <3
+Happy hacking &lt;3
