Add elsa's name

--- a/content/posts/randomness.mdx
+++ b/content/posts/randomness.mdx
@@ -1129,5 +1129,5 @@ try and experiment with a few solutions.
 ---
 
 Thanks to Chris Biscardi, Brent Jackson, Cole Bemis, Taylor Bell,
-Florian Kissling, Prince Wilson, Rose Wiegley, Nick Bender, and my wife for
+Florian Kissling, Prince Wilson, Rose Wiegley, Nick Bender, and my wife, Elsa, for
 reading drafts of this post and providing feedback.
