Add more context

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,4 +5,23 @@ export default (props) => (
 
 # BlackLivesMatter
 
-[Donate (preferably monthly) &rarr;](https://blacklivesmatters.carrd.co/#donate)
+In an act of solidarity with the Black Community I've taken my homepage
+offline. I pretty much only write about tech, and tech can wait. Tech is
+not a solution for the discrimination and justice many folks are forced
+to deal with on a daily basis.
+
+This isn't right.
+
+Our system needs reform.
+
+<br />
+<br />
+
+---
+
+<br />
+<br />
+
+- [Donate (preferably monthly) &rarr;](https://blacklivesmatters.carrd.co/#donate)
+- [Read (preferably all) &rarr;](https://bookshop.org/shop/baratunde)
+- [White Guyde to the Galaxy &rarr;](https://tatianamac.com/posts/white-guyde)
