Add more context

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,7 +7,7 @@ export default (props) => (
 
 In an act of solidarity with the Black Community I've taken my homepage
 offline. I pretty much only write about tech, and tech can wait. Tech is
-not a solution for the discrimination and justice many folks are forced
+not a solution for the discrimination and injustice many folks are forced
 to deal with on a daily basis.
 
 This isn't right.
