Add more context

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,14 +5,19 @@ export default (props) => (
 
 # BlackLivesMatter
 
-In an act of solidarity with the Black Community I've taken my homepage
-offline. I pretty much only write about tech, and tech can wait. Tech is
-not a solution for the discrimination and injustice many folks are forced
-to deal with on a daily basis.
+In an act of solidarity with the Black Community I’ve taken my homepage
+offline. I pretty much only write about tech, and tech can wait.
+Tech is not a solution for the systemic discrimination and injustice
+many folks are forced to deal with on a daily basis.
 
-This isn't right.
+Black folks are being murdered by police with zero accountability,
+with zero repercussions, with zero oversight. Lives are in danger.
 
-Our system needs reform.
+… In 2020.
+
+This isn’t right, our system needs reform. Institutions need dismantling.
+
+Please vote.
 
 <br />
 <br />
