Defund the police

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -16,6 +16,7 @@ with zero repercussions, with zero oversight. Lives are in danger.
 … In 2020.
 
 This isn’t right, our system needs reform. Institutions need dismantling.
+The police need to be defunded.
 
 Please vote.
 
