Add back previous homepage

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,24 +1,33 @@
 import Layout from '../components/layout'
-export default (props) => (
-  <Layout skipSubscribe={true} skipTitle={true} {...props} />
-)
+export default (props) => <Layout skipSubscribe={true} {...props} />
 
-# BlackLivesMatter
+# Hello, I'm John Otander
 
-In an act of solidarity with the Black Community I’ve taken my homepage
-offline. I pretty much only write about tech, and tech can wait.
-Tech is not a solution for the systemic discrimination and injustice
-many folks are forced to deal with on a daily basis.
+You can usually find me on the internet as
+[johno][gh] or [4lpine][tw].
 
-Black folks are being murdered by police with zero accountability,
-with zero repercussions, with zero oversight. Lives are in danger.
+I'm a web developer and designer that builds things. Lots of things.
+I focus on improving design/developer tooling and making it more
+approachable to build websites and applications.
 
-… In 2020.
+I've built a few popular open source projects including
+[Blocks](https://blocks-ui.com), [MDX](https://mdxjs.com),
+[Tachyons](https://tachyons.io), and [CSS Stats](https://cssstats.com).
 
-This isn’t right, our system needs reform. Institutions need dismantling.
-The police need to be defunded.
+I'm part of the [unified collective](https://unifiedjs.com) and
+I'm building [Components AI](https://components.ai) in my spare time.
+I'm also creating a course, [Compilers for Humans](https://compilersforhumans.com)
+that seeks to show you that compilers aren't magic.
 
-Please vote.
+I work at [Gatsby](https://gatsbyjs.com) helping to build a new
+presentation layer for the web.
+
+- [Writing](/writing)
+- [Newsletter](/newsletter)
+- [GitHub][gh]
+- [Twitter][tw]
+- [Videos](/videos)
+- [Resume](/resume)
 
 <br />
 <br />
@@ -28,6 +37,7 @@ Please vote.
 <br />
 <br />
 
-- [Donate (preferably monthly) &rarr;](https://blacklivesmatters.carrd.co/#donate)
-- [Read (preferably all) &rarr;](https://bookshop.org/shop/baratunde)
-- [White Guyde to the Galaxy &rarr;](https://tatianamac.com/posts/white-guyde)
+✌️ I'm not currently looking for new opportunities.
+
+[gh]: https://github.com/johno
+[tw]: https://twitter.com/4lpine
