Update for blog theme v2

--- a/content/posts/guessable.mdx
+++ b/content/posts/guessable.mdx
@@ -6,6 +6,8 @@ tags:
   - writing
   - gatsby
   - api
+keywords:
+  - api
 ---
 
 When building and designing for the web we want to be productive and efficient.
