--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,17 +10,16 @@ I'm a web developer and designer that builds things. Lots of things.
 I focus on improving design/developer tooling and making it more
 approachable to build websites and applications.
 
+I'm building [Components AI](https://components.ai), an
+experimental computational design platform for exploring generative space.
+
 I've built a few popular open source projects including
 [Blocks](https://blocks-ui.com), [MDX](https://mdxjs.com),
 [Tachyons](https://tachyons.io), and [CSS Stats](https://cssstats.com).
 
 I'm part of the [unified collective](https://unifiedjs.com) and
-I'm building [Components AI](https://components.ai) in my spare time.
 I'm also creating a course, [Compilers for Humans](https://compilersforhumans.com)
 that seeks to show you that compilers aren't magic.
-
-I work at [Gatsby](https://gatsbyjs.com) helping to build a new
-presentation layer for the web.
 
 - [Writing](/writing)
 - [Newsletter](/newsletter)
