--- a/content/posts/randomness.mdx
+++ b/content/posts/randomness.mdx
@@ -13,6 +13,7 @@ tags:
 import chroma from 'chroma-js'
 import sample from 'lodash.sample'
 import { ArrowRight, Lock, Unlock } from 'react-feather'
+import * as React from 'react'
 
 As part of my work I find myself thinking about computational design,
 randomness, and color. A lot.
