--- a/src/pages/now/january-2020.mdx
+++ b/src/pages/now/january-2020.mdx
@@ -1,6 +1,3 @@
-import Layout from '../../components/layout'
-export default Layout
-
 # Now
 
 I try to keep what I'm working on and reading to a minimum in order
@@ -37,8 +34,8 @@ here's a brief summary.
     border="0"
     alt=""
     style="border:none !important; margin:0px !important;"
-  />:
-  A framework that helps empower folks researching and writing to do so more effectively.
+  />: A framework that helps empower folks researching and writing to do so more
+  effectively.
 - <a
     target="_blank"
     href="https://www.amazon.com/gp/product/0262517264/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0262517264&linkCode=as2&tag=johno-20&linkId=99eef16ca20dfdaf780d3afad8fe361c"
@@ -53,8 +50,8 @@ here's a brief summary.
     border="0"
     alt=""
     style="border:none !important; margin:0px !important;"
-  />:
-  Since I'm working on a course about compilers, I figured I should also read a book about the woman that invented them.
+  />: Since I'm working on a course about compilers, I figured I should also read
+  a book about the woman that invented them.
 
 ## Listening
 
