--- a/content/posts/bezold-effect.mdx
+++ b/content/posts/bezold-effect.mdx
@@ -10,6 +10,8 @@ tags:
   - color
 ---
 
+import * as React from 'react'
+
 The Bezold Effect was named after Wilhelm von Bezold (1837–1907) who
 discovered it when experimenting with ways to **modify rug design
 by only changing one color**.
@@ -75,7 +77,7 @@ export const BezoldExample = () => {
         min="0"
         step="1"
         value={darkness}
-        onChange={e => setDarkness(e.target.value)}
+        onChange={(e) => setDarkness(e.target.value)}
       />
     </div>
   )
